--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
               <h4>Buy me more!</h4>
               <input type="text" class="form-control" id="TTTransferAmount" placeholder="Amount" />
               <button class="btn btn-primary" id="buyDekz" type="button">Buy!</button><br/>
+              <strong>Transaction Receipt: </strong><span id="txReceipt"><span><br/><br/>
               <input type="text" class="form-control" id="LeaveMessage" placeholder="..." />
               <button class="btn btn-primary" id="leaveMessage" type="button">Leave a message</button><br/><br/>
               <strong>Latest Message</strong>: <span id="LatestMessage">...</span><br/><br/>
