--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,20 @@
 
       <div id="petsRow" class="row">
         <div class="col-sm-6 col-sm-push-3 col-md-4 col-md-push-4">
+          <!-- This is the only bit that would be REALLY nice to have on the page -->
+          <div class="panel panel-default" id="message">
+            <div class="panel-heading">
+              <h3 class="panel-title">Messages</h3>
+            </div>
+            <div class="panel-body">
+              <input type="text" class="form-control" id="LeaveMessage" placeholder="..." /><br/>
+              <button class="btn btn-primary" id="leaveMessage" type="button">Leave a message</button><br/><br/>
+              <strong>Latest Message</strong>: <span id="LatestMessage">...</span><br/><br/>
+              <button class="btn btn-primary" id="getNewMessage" type="button">Get new message</button><br/><br/>
+            </div>
+          </div>
+          <!-- This is section isn't really required, we could just let people buy by sending direct to the contract -->
+          <!-- The balance bit could be nice though, once you've bought you just see you your balance when you land on the page -->
           <div class="panel panel-default">
             <div class="panel-heading">
               <h3 class="panel-title">My Wallet</h3>
@@ -38,15 +52,12 @@
               <strong>Awesome! you have </strong>: <span id="TTBalance"></span> DKZ<br/><br/>
               <button class="btn btn-primary" id="checkDekz" type="button">Check Balance</button><br/>
               <h4>Buy me more!</h4>
-              <input type="text" class="form-control" id="TTTransferAmount" placeholder="Amount" />
+              <input type="text" class="form-control" id="TTTransferAmount" placeholder="Amount" /><br/>
               <button class="btn btn-primary" id="buyDekz" type="button">Buy!</button><br/>
               <strong>Transaction Receipt: </strong><span id="txReceipt"><span><br/><br/>
-              <input type="text" class="form-control" id="LeaveMessage" placeholder="..." />
-              <button class="btn btn-primary" id="leaveMessage" type="button">Leave a message</button><br/><br/>
-              <strong>Latest Message</strong>: <span id="LatestMessage">...</span><br/><br/>
-              <button class="btn btn-primary" id="getNewMessage" type="button">Get new message</button><br/><br/>
             </div>
           </div>
+          <!-- purely a hack for me to test out a method to change the account belonging to jacob -->
           <div class="panel panel-default" id="adminOnly">
             <div class="panel-heading">
               <h3 class="panel-title">Admin</h3>
@@ -57,6 +68,8 @@
               <button class="btn btn-primary" id="changeDekzTo" type="button">Change Dekz Address</button>
             </div>
           </div>
+          <!-- This could be nice to have, we could hide it unless the current account is jacob's account. -->
+          <!-- This let's jacob take all the money from the sale -->
           <div class="panel panel-default" id="dekzOnly">
             <div class="panel-heading">
               <h3 class="panel-title">Dekz Only</h3>
